URL was externalised and updated for new version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ mapupdate.region=0
 mapupdate.device=highgen2
 mapupdate.market=00
 mapupdate.lastKnownMD5=159659e08e68e437f60d19f65322f01c
+
+mapupdate.url=http://emosite.volkswagen.de/esn/discover_care/files/configuration/_jcr_content/renditions/rendition.file/discovercare.xml
