--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.mail.host=galuszka.pl
+spring.mail.host=example.com
 spring.mail.port=587
-spring.mail.username=noreply@galuszka.pl
-spring.mail.password=dQtwD-Z6,p5%
+spring.mail.username=example@example.com
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 
@@ -9,5 +9,6 @@ mapupdate.region=0
 mapupdate.device=highgen2
 mapupdate.market=00
 mapupdate.lastKnownMD5=159659e08e68e437f60d19f65322f01c
-
 mapupdate.url=http://emosite.volkswagen.de/esn/discover_care/files/configuration/_jcr_content/renditions/rendition.file/discovercare.xml
+
+notify.email=example@example.com
