--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.main.banner-mode=off
+
 spring.mail.host=example.com
 spring.mail.port=587
 spring.mail.username=example@example.com
@@ -15,4 +17,5 @@ mapupdate.url=http://www.volkswagen.com/content/medialib/vwd4/global/discovercar
 
 notify.email=example@example.com
 
-logging.level.pl.galuszka.mapchecker.PeriodicChecker=INFO
+logging.level.pl.galuszka.mapchecker.PeriodicChecker=info
+logging.level.root=error
